--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,166 +1,57 @@
 <!DOCTYPE html>
-<html lang="en"      xmlns:th = "http://www.thymeleaf.org"
+<html lang="en" xmlns:th = "http://www.thymeleaf.org"
       xmlns:sec = "http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-<head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="../css/header.css" rel="stylesheet" type="text/css"/>
-    <link href="../css/foote.css" rel="stylesheet" type="text/css"/>
-    <link href="../css/admin_index.css" rel="stylesheet" type="text/css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
-<header class="main-header">
-    <div class="header_content">
-        <img class="logo" src="../static/images/tree_logo.jfif" alt="tree logo"/>
-        <img class="img-fluid" src="../static/images/family_tree_title.png" alt="image_header">
-    </div>
+    <head>
+        <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js}" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js}" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script th:src="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js}" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" th:href="@{https://use.fontawesome.com/releases/v5.7.0/css/all.css}" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css}">
+        <link th:href="@{/css/header.css}" href="/css/header.css" rel="stylesheet" type="text/css"/>
+        <link th:href="@{/css/foote.css}" href="/css/foote.css" rel="stylesheet" type="text/css"/>
+        <link th:href="@{/css/admin_index.css}" href="/css/admin_index.css" rel="stylesheet" type="text/css"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta charset="UTF-8">
+        <title th:text="${page_title}"></title>
+    </head>
+    <body>
+        <!--Header fragment-->
+        <div th:replace="fragments/header :: header"></div>
+        <div class="container-fluid">
+            <div class="row content">
+                <div class="col-sm-7">
+                    <h4><small>RECENT POSTS</small></h4>
+                    <hr>
+                    <h2>I Love Food</h2>
+                    <h5><span class="glyphicon glyphicon-time"></span> Post by Jane Dane, Sep 27, 2015.</h5>
+                    <h5><span class="label label-danger">Food</span> <span class="label label-primary">Ipsum</span></h5><br>
+                    <p>Food is my passion. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in  cididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <br><br>
 
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">Ettoubali's Tribe Tree</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                data-target="#navbarNavDropdown"
-                aria-controls="navbarText"
-                aria-expanded="false"
-                aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="home.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">History</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav flex-row justify-content-between <!--ml-auto-->">
-                <li class="dropdown order-1">
-                    <button type="button" id="dropdownMenu1" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
-                    <ul class="dropdown-menu dropdown-menu-right <!--mt-2-->">
-                        <li class="px-3 py-2">
-                            <form class="form" role="form">
-                                <div class="form-group">
-                                    <input id="emailInput" placeholder="Email" class="form-control form-control-sm" type="text" required="">
-                                </div>
-                                <div class="form-group">
-                                    <input id="passwordInput" placeholder="Password" class="form-control form-control-sm" type="text" required="">
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-primary btn-block">Login</button>
-                                </div>
-                                <div class="form-group text-center">
-                                    <small><a href="#" data-toggle="modal" data-target="#modalPassword">Forgot password?</a></small>
-                                </div>
-                            </form>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div id="modalPassword" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3>Forgot password</h3>
-                    <button type="button" class="close font-weight-light" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4><small>RECENT POSTS</small></h4>
+                    <hr>
+                    <h2>Officially Blogging</h2>
+                    <h5><span class="glyphicon glyphicon-time"></span> Post by John Doe, Sep 24, 2015.</h5>
+                    <h5><span class="label label-success">Lorem</span></h5><br>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <hr>
                 </div>
-                <div class="form-group">
-                    <label class="sr-only"  for="email">Email</label>
-                    <input id="email" class="form-control" type="email" placeholder="E-mail"/>
-                </div>
-                <div class="modal-footer">
-                    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-                    <button class="btn btn-primary">Save changes</button>
+
+                <div class="jumbotron col-sm-2 sidenav">
+                    <img th:src="@{/images/profile_image.png}" class="img-circle" alt="profile image">
+                    <p class="info-title">Name: <span class="info-node">Muhammad Weld Fal</span></p>
+                    <p class="info-title">Surname: <span class="info-node">Weld Khatra Weld Bachir</span></p>
+                    <p class="info-title">Birth date: <span class="info-node">22/05/1901</span></p>
+                    <p class="info-title">Death date: <span class="info-node">Alive</span></p>
+                    <p class="info-title">Birth place: <span class="info-node">Labyar</span></p>
+                    <p class="info-title">Parent name: <span class="info-node">FAl wel Sboya</span></p>
+                    <p class="info-tit  le">Description: <span class="info-node">----------------------------------------------------------------------------<br>
+                        ----------------------------------------------------------------------------------------------------</span></p>
                 </div>
             </div>
+            <!--Footer fragment-->
+            <div th:replace="fragments/footer :: footer"></div>
         </div>
-    </div>
-</header>
-
-<div class="container-fluid">
-    <div class="row content">
-        <div class="col-sm-7">
-            <h4><small>RECENT POSTS</small></h4>
-            <hr>
-            <h2>I Love Food</h2>
-            <h5><span class="glyphicon glyphicon-time"></span> Post by Jane Dane, Sep 27, 2015.</h5>
-            <h5><span class="label label-danger">Food</span> <span class="label label-primary">Ipsum</span></h5><br>
-            <p>Food is my passion. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in  cididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <br><br>
-
-            <h4><small>RECENT POSTS</small></h4>
-            <hr>
-            <h2>Officially Blogging</h2>
-            <h5><span class="glyphicon glyphicon-time"></span> Post by John Doe, Sep 24, 2015.</h5>
-            <h5><span class="label label-success">Lorem</span></h5><br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <hr>
-        </div>
-
-        <div class="jumbotron col-sm-3 sidenav">
-            <img src="../static/images/profile_image.png" class="img-circle" alt="profile image">
-            <p class="info-title">Name: <span class="info-node">Muhammad Weld Fal</span></p>
-            <p class="info-title">Surname: <span class="info-node">Weld Khatra Weld Bachir</span></p>
-            <p class="info-title">Birth date: <span class="info-node">22/05/1901</span></p>
-            <p class="info-title">Death date: <span class="info-node">Alive</span></p>
-            <p class="info-title">Birth place: <span class="info-node">Labyar</span></p>
-            <p class="info-title">Parent name: <span class="info-node">FAl wel Sboya</span></p>
-            <p class="info-tit  le">Description: <span class="info-node">----------------------------------------------------------------------------<br>
-                ----------------------------------------------------------------------------------------------------</span></p>
-        </div>
-    </div>
-
-    <footer class="jumbotron">
-        <div class="row">
-            <div class="col-sm-4 left__side">
-                <h6>Ettoubali's Family Tree</h6>
-                <p>This site is to maintain and keep the information of the Saharian tribes registered and saved for our next generations.</p>
-
-                <a class="email-ic mr-3" role="button"><i class="far fa-lg fa-envelope"></i>  support@support.com</a>
-                <br>
-                <p>You can find us here:</p>
-                <a class="fb-ic mr-3" role="button"><i class="fab fa-lg fa-facebook-f"></i></a>
-                <a class="tw-ic mr-3" role="button"><i class="fab fa-lg fa-twitter"></i></a>
-                <a class="ins-ic mr-3" role="button"><i class="fab fa-lg fa-instagram"></i></a>
-            </div>
-
-            <div class="col-sm-4 center__side">
-                <h5>Quick Links</h5>
-                <ul>
-                    <li><a>Terms and Conditions</a></li>
-                </ul>
-            </div>
-
-            <div class="col-sm-4">
-                <h5>Contact Us</h5>
-                <form>
-                    <div class="form-group">
-                        <label for="emailAddress" class="sr-only">Your email address</label>
-                        <input type="email" class="form-control" id="emailAddress" placeholder="Your email address">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="Message" class="sr-only">Message</label>
-                        <textarea class="form-control rounded-0" id="message" rows="3" placeholder="Message..."></textarea>
-                    </div>
-                    <button type="button" class="btn btn-primary" style="background-color: olivedrab">Send</button>
-                </form>
-            </div>
-        </div>
-    </footer>
-</div>
-</body>
+    </body>
 </html>
